--- a/index.html
+++ b/index.html
@@ -25,25 +25,66 @@
   
   .cup_1 {
     position: absolute;
-    top: 100px;
-    left: 80px;
+    top: 300px;
+    left: 100px;
+  }
+  
+  .cup_2 {
+    position: absolute;
+    top: 200px;
+    left: 100px;
   }
   
   .triangle {
     width: 50%;
     height: 90%;
     background-color: red;
-    clip-path: polygon(0 0, 0% 100%, 91% 50%);
+    clip-path: polygon(0 0, 0% 100%, 61% 50%);
   }
-
+  .stripes {
+    background-image: linear-gradient(#ffffff 50%, #002e7a 50%);
+    width: 100%;
+    height: 100%;
+    position: absolute
+  }
+  .base {
+    clip-path: polygon(17% 69%, 80% 69%, 100% 100%, 0% 100%);
+    background-color: silver;
+  }
+  
+  .coffeecan1 {
+    background-color: FDC90D;
+    opacity: 70%; 
+    width: 35%;
+    height: 50%;
+    position: absolute;
+    top: 140px;
+    left: 280px;
+  }
+  
+  .coffeecan2 {
+    background-color: FDC90D;
+    opacity: 70%; 
+    width: 35%;
+    height: 50%;
+    position: absolute;
+    top: 100px;
+    left: 260px;
+  }
   </style>
 
 <body>
   <div class="frame">
   	<div class="cup cup_1">
+      <div class="stripes"></div>
       <div class="triangle"></div>
   </div>
-  	<div class="coffee">
+<div class="cup cup_2">
+      <div class="stripes"></div>
+      <div class="triangle"></div>
   </div>
+  	<div class="coffeecan1">
+  </div>
+    	<div class="coffeecan2">
 </div>
 </body>
