--- a/index.html
+++ b/index.html
@@ -21,20 +21,52 @@
     border: 1px solid black;
     width: 88px;
     height: 90px;
-  }
-  
+    position: relative; /* To position the handle */
+    background-image: repeating-linear-gradient(
+    to bottom,
+    #002A8F 0%,
+    #002A8F 50%,
+    #ffffff 50%,
+    #ffffff 100%
+  );
+  background-size: 100% 20%;
+}
+
+/* Handle for the cup */
+.cup::after {
+  content: '';
+  position: absolute;
+  right: -20px;
+  top: 20px;
+  width: 20px;
+  height: 40px;
+  border: 3px solid black;
+  border-top: transparent;
+  border-bottom: transparent;
+  border-radius: 10px;
+}
+
+  /* First Cup */
   .cup1 {
     position: absolute;
     top: 300px;
     left: 100px;
   }
   
+  /* Second Cup */
   .cup2 {
     position: absolute;
     top: 200px;
     left: 100px;
   }
   
+  /* Third Cup */
+				  .cup3 {
+  position: absolute;
+  top: 100px; /* Adjust as needed */
+  left: 200px; /* Adjust as needed */
+  z-index: 1;
+}
   .triangle {
     width: 50%;
     height: 90%;
@@ -56,37 +88,83 @@
   .coffee {
     background-image: linear-gradient(#FDC90D 66%, red 30%);
     opacity: 80%; 
-    width: 35%;
-    height: 50%;
+    width: 30%;
+    height: 40%;
+    background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
+  border: 1px solid #333; /* Representing the thin border of the can */
   }
- 
-  .can1 {
-    position: absolute;
-    top: 140px;
-    left: 300px;
-  }
+
+  
+  
+.can1 {
+  position: absolute;
+  background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
+  border: 1px solid #333; /* Representing the thin border of the can */
+  /* Add more styling details like gradients and text here */
+  	top: 190px;
+  left: 190px;
+  z-index: 0;
+}
   
   .can2 {
-    position: absolute;
-    top: 100px;
-    left: 260px;
-  }
+  position: absolute;
+  background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
+  border: 1px solid #333; /* Representing the thin border of the can */
+  /* Add more styling details like gradients and text here */
+	  top: 200px;
+  left: 300px;
+}
+
+  
+/* Kettle */
+.kettle {
+  position: absolute;
+  top: 250px; /* Adjust as needed */
+  left: 50px; /* Adjust as needed */
+  width: 100px; /* Adjust as needed */
+  height: 120px; /* Adjust as needed */
+  background-color: orange; /* Base color for kettle */
+  border-radius: 50px 50px 5px 5px; /* Adjust to match kettle shape */
+}
+
+.kettle-lid {
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  left: 45%; /* Adjust as needed */
+  width: 50%; /* Adjust as needed */
+  height: 20px; /* Adjust as needed */
+  background-color: darkorange; /* Lid color */
+  border-radius: 50%;
+}
+
+
+  
   
   </style>
 
 <body>
   <div class="frame">
-  	<div class="cup cup1">
+    <div class="cup cup1">
       <div class="stripes"></div>
       <div class="triangle"></div>
-  </div>
-<div class="cup cup2">
+    </div>
+    <div class="cup cup2">
       <div class="stripes"></div>
       <div class="triangle"></div>
+    </div>
+    <div class="cup cup3">
+      <div class="stripes"></div>
+      <div class="triangle"></div>
+    </div>
+    <div class="kettle">
+      <div class="kettle-lid"></div>
+      <!-- Add more elements for kettle spout and handle -->
+    </div>
+    <div class="coffee can1">
+      <!-- Add more elements for text and other details -->
+    </div>
+    <div class="coffee can2">
+      <!-- Add more elements for text and other details -->
+    </div>
   </div>
-  	<div class="coffee can1">
-  </div>
-    	<div class="coffee can2">
-  </div>
-</div>
 </body>
