--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     #ffffff 100%
   );
   background-size: 100% 20%;
+      opacity: 80%;
 }
 
 /* Handle for the cup */
@@ -50,22 +51,26 @@
   .cup1 {
     position: absolute;
     top: 300px;
-    left: 100px;
+    left: 150px;
+    z-index: 5;
   }
   
   /* Second Cup */
   .cup2 {
     position: absolute;
     top: 200px;
-    left: 100px;
+    left: 150px;
+    z-index: 5;
   }
   
   /* Third Cup */
 				  .cup3 {
-  position: absolute;
-  top: 100px; /* Adjust as needed */
-  left: 200px; /* Adjust as needed */
-  z-index: 1;
+  			 position: absolute;
+   top: 100px; /* Adjust as needed */
+   left: 200px; /* Adjust as needed */
+   z-index: 1;
+  	 transform: scale;
+   scale: 90%;
 }
   .triangle {
     width: 50%;
@@ -112,7 +117,7 @@
   border: 1px solid #333; /* Representing the thin border of the can */
   /* Add more styling details like gradients and text here */
 	  top: 200px;
-  left: 300px;
+  left: 270px;
 }
 
   
@@ -157,9 +162,14 @@
       <div class="triangle"></div>
     </div>
     <div class="kettle">
-      <div class="kettle-lid"></div>
-      <!-- Add more elements for kettle spout and handle -->
-    </div>
+  		   <div class="kettle-top"></div>
+     <div class="kettle-lid"></div>
+     <div class="kettle-handle"></div>
+     <div class="kettle-waist"></div>
+     <div class="kettle-base"></div>
+  <!-- Add more elements for the kettle spout and other details -->
+</div>
+
     <div class="coffee can1">
       <!-- Add more elements for text and other details -->
     </div>
