--- a/index.html
+++ b/index.html
@@ -53,24 +53,26 @@
     top: 300px;
     left: 150px;
     z-index: 5;
+    scale: 90%;
   }
   
   /* Second Cup */
   .cup2 {
     position: absolute;
-    top: 200px;
+    top: 210px;
     left: 150px;
     z-index: 5;
+    scale: 90%;
   }
   
   /* Third Cup */
 				  .cup3 {
   			 position: absolute;
-   top: 100px; /* Adjust as needed */
+   top: 110px; /* Adjust as needed */
    left: 200px; /* Adjust as needed */
    z-index: 1;
   	 transform: scale;
-   scale: 90%;
+   scale: 80%;
 }
   .triangle {
     width: 50%;
@@ -196,9 +198,10 @@
   width: 150px; /* Full width relative to the pot size */
   height: 130px; /* Height of the base */
   background-color: silver; /* Silver color for the base */
-  border-radius: 0 0 10px 10px; /* Slightly rounded bottom */
+  clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%); /* Trapezoid shape */
   z-index: 1;
 }
+
 
 
   
