--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
   background: linear-gradient(to top left, #ffcb85, #ffa500);
   clip-path: polygon(0 0, 100% 0, 75% 100%, 0 100%);
   width: 25%; /* each panel will take up 25% of the width */
+  z-index: 2;
 }
 
 /* Fourth Panel - Darker towards bottom right */
