--- a/index.html
+++ b/index.html
@@ -1,281 +1,29 @@
 <style>
-  
-  * { box-sizing: border-box; }
-  
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
+    width: 100vw;
+    height: 100vh;
+    cursor: url(images/cursors/rainbow/0.gif), auto;
   }
-	
-  .frame {
-    position: relative;
-    width: 500px;
-    height: 500px;
-    border: 1px solid black;
-  }
-  
-  .cup {
-    width: 88px;
-    height: 90px;
-    position: relative; /* To position the handle */
-    background-image: repeating-linear-gradient(
-    to bottom,
-    #002A8F 0%,
-    #002A8F 50%,
-    #ffffff 50%,
-    #ffffff 100%
-  );
-  background-size: 100% 20%;
-      opacity: 60%;
-}
+</style>
 
-  /* First Cup */
-  .cup1 {
-    position: absolute;
-    top: 310px;
-    left: 150px;
-    z-index: 5;
-    scale: 95%;
-  }
-  
-  /* Second Cup */
-  .cup2 {
-    position: absolute;
-    top: 225px;
-    left: 150px;
-    z-index: 5;
-    scale: 95%;
-  }
-  
-  /* Third Cup */
-				  .cup3 {
-  			 position: absolute;
-   top: 110px; /* Adjust as needed */
-   left: 200px; /* Adjust as needed */
-   z-index: 1;
-  	 transform: scale;
-   scale: 80%;
-}
-  .triangle {
-    width: 50%;
-    height: 90%;
-    background-color: red;
-    clip-path: polygon(0 0, 0% 100%, 61% 50%);
-  }
-  .stripes {
-    background-image: linear-gradient(#ffffff 50%, #002e7a 50%);
-    width: 100%;
-    height: 100%;
-    position: absolute
-  }
+<body data-num="0"></body>
+
+<script>
+
+  function aniCursor () {    
+    const num = document.body.dataset.num
+    const val = `url(images/cursors/rainbow/${num}.gif), auto`
+    document.body.style.cursor = val
     
-  .coffee {
-    background-image: linear-gradient(#FDC90D 66%, red 30%);
-    opacity: 60%; 
-    width: 30%;
-    height: 40%;
-    background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
+    const max = 22 // largest number in my set of images
+    let nextVal = Number(document.body.dataset.num) + 1
+    if (nextVal > max) nextVal = 0
+    document.body.dataset.num = nextVal
+
+    const delay = 100 // speed in milliseconds
+    setTimeout(aniCursor, delay)
   }
   
-			.can1 {
-  position: absolute;
-  background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
-  /* Add more styling details like gradients and text here */
-  	top: 190px;
-  left: 190px;
-  z-index: 0;
-}
-  
-  .can2 {
-  position: absolute;
-  background-color: #FDC90D; /* Bright yellow color for Café Bustelo can */
-  /* Add more styling details like gradients and text here */
-	  top: 200px;
-  left: 270px;
-}
-
-  
-/* Kettle */
-.kettle {
-  position: absolute;
-  top: 256px; /* Adjust as needed */
-  left: 5px; /* Adjust as needed */
-  opacity: 60%;
-}
-
-  /* Kettle Top */
-.kettle-top{
-  height: 20px;
-  width: 15px;
-  position: absolute;
-  top: -179px;
-  left: 110px;
-  background-color: black;
-  border-top-left-radius: 10px; /* Adjust as needed */
-  border-top-right-radius: 10px; /* Adjust as needed */
-}
-
-
-/* Kettle Lid */
-.kettle-lid {
-  position: absolute;
-  top: -159px; /* Adjust as needed */
-  left: 45px; /* Center relative to the kettle pot */
-  width: 150px; /* Adjust as needed */
-  height: 30px; /* Adjust as needed */
-  background-color: #ffa500; /* Orange color for the lid */
-  clip-path: ellipse(75px 30px at 50% 100%); /* Flipping the semi-circle */
-  z-index: 3;
-}
-
-/* Kettle Handle */
-.kettle-handle {
-  position: absolute;
-  top: -90px; /* Adjust based on the kettle pot position */
-  left: 21px; /* Adjust so it's positioned to the side of the pot */
-  width: 20px; /* Width of the handle */
-  height: 80px; /* Height of the handle */
-  background-color: black;
-  z-index: 4; /* Ensure it's above other elements */
-  transform: rotate(-10deg); /* Adjust the angle to match the image perspective */
-}
-
-.kettle-handle::before,
-.kettle-handle::after {
-  content: '';
-  position: absolute;
-  background-color: black;
-  height: 20px; /* Half the handle width for a nice curve */
-  border-radius: 50%;
-  z-index: 11;
-}
-
-.kettle-handle::before {
-  top: -10px; /* Positioned to create the top part of the handle */
-  left: 0;
-  width: 36px; /* Extend beyond the width of the handle to create the top edge */
-  border-radius: 10px 0 0 0; /* Only top-left corner is rounded */
-}
-
-.kettle-handle::after {
-  bottom: -10px; /* Half the extra height, creates the bottom curve */
-  left: 0;
-  width: 23px; /* Match the handle width */
-}
-  
-/* Kettle Pot */
-.kettle-pot {
-  position: absolute;
-  top: -129px;
-  left: 45px;
-  width: 149px;
-  height: 125px;
-  z-index: 2;
-}
-
-/* Panel Base Style */
-.panel {
-  position: absolute;
-  top: 0;
-  height: 100%;
-}
-
-/* First Panel - Leftmost panel */
-.panel:nth-child(1) {
-  left: 0;
-  background: linear-gradient(to bottom right, #ffc77d, #ff7f00);
-  clip-path: polygon(0 0, 100% 0, 150% 150%, 40% 110%);
-  width: 34%; /* each panel will take up 25% of the width */
-}
-
-/* Second Panel - Solid color */
-.panel:nth-child(2) {
-  left: 25%;
-  background: #ffa500; /* Solid color */
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%);
-  width: 25%; /* each panel will take up 25% of the width */
-}
-
-/* Third Panel - Lighter towards top left */
-.panel:nth-child(3) {
-  left: 50%;
-  background: linear-gradient(to top left, #ffcb85, #ffa500);
-  clip-path: polygon(0 0, 100% 0, 75% 100%, 0 100%);
-  width: 25%; /* each panel will take up 25% of the width */
-  z-index: 2;
-}
-
-/* Fourth Panel - Darker towards bottom right */
-.panel:nth-child(4) {
-  left: 69%;
-  background: linear-gradient(to bottom right, #ffa500, #ff7f00);
-  clip-path: polygon(0 0, 100% 0, 60% 100%, 0 100%);
-  width: 31.5%; /* each panel will take up 25% of the width */
-}
-
-/* Kettle Waist */
-.kettle-waist {
-  position: absolute;
-  top: -4px; /* Adjust based on the pot height */
-  left: 61px; /* Center relative to the kettle pot */
-  width: 117px; /* The waist is narrower */
-  height: 20px; /* Adjust as needed */
-  background-color: #ffa500; /* Orange color */
-  z-index: 2;
-}
-
-/* Kettle Base */
-.kettle-base {
-  position: absolute;
-  top: 16px; /* Adjust based on the waist position */
-  left: 45px; /* Adjust to center it relative to the pot */
-  width: 150px; /* Full width relative to the pot size */
-  height: 120px; /* Height of the base */
-  background-color: silver; /* Silver color for the base */
-  clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%); /* Trapezoid shape */
-  z-index: 1;
-}
-
-  
-  </style>
-
-<body>
-  <div class="frame">
-    <div class="cup cup1">
-      <div class="stripes"></div>
-      <div class="triangle"></div>
-    </div>
-    <div class="cup cup2">
-      <div class="stripes"></div>
-      <div class="triangle"></div>
-    </div>
-    <div class="cup cup3">
-      <div class="stripes"></div>
-      <div class="triangle"></div>
-    </div>
-    <div class="kettle">
-  		  <div class="kettle-top"></div>
-      <div class="kettle-lid"></div>
-      <div class="kettle-handle"></div>
-      <div class="kettle-pot">
-  	      <div class="panel"></div>
-        <div class="panel"></div>
-        <div class="panel"></div>
-        <div class="panel"></div>
-</div>
-
-      <div class="kettle-waist"></div>
-      <div class="kettle-base"></div>
-				    </div>
-
-    <div class="coffee can1">
-      <!-- Add more elements for text and other details -->
-    </div>
-    <div class="coffee can2">
-      <!-- Add more elements for text and other details -->
-    </div>
-  </div>
-</body>
+  window.addEventListener('load', aniCursor)
+</script>
