--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   
   * { box-sizing: border-box; }
   
+  
   body {
     display: flex;
     justify-content: center;
@@ -25,6 +26,7 @@
   );
   background-size: 100% 20%;
   opacity: 0.5; /* Opacity should be from 0.0-1.0, not percentage */
+
 }
 
 .cup::before {
@@ -42,7 +44,7 @@
 
     .triangle {
         width: 50%;
-        height: 90%;
+        height: 100%;
         background-color: red;
         clip-path: polygon(0 0, 0% 100%, 50% 50%);
       }
@@ -60,6 +62,65 @@
       height: 100%;
       position: absolute;
 }
+/* Keyframes for cup1's vertical movement */
+@keyframes cup1UpDown {
+  0%, 100% {
+    top: 310px;
+  }
+  50% {
+    top: 305px;
+  }
+}
+
+/* Keyframes for cup1's horizontal movement */
+@keyframes cup1LeftRight {
+  0%, 100% {
+    left: 150px;
+  }
+  50% {
+    left: 155px;
+  }
+}
+
+/* Keyframes for cup2's vertical movement */
+@keyframes cup2UpDown {
+  0%, 100% {
+    top: 225px;
+  }
+  50% {
+    top: 220px;
+  }
+}
+
+/* Keyframes for cup2's horizontal movement */
+@keyframes cup2LeftRight {
+  0%, 100% {
+    left: 150px;
+  }
+  50% {
+    left: 145px;
+  }
+}
+
+/* Keyframes for cup3's vertical movement */
+@keyframes cup3UpDown {
+  0%, 100% {
+    top: 110px;
+  }
+  50% {
+    top: 115px;
+  }
+}
+
+/* Keyframes for cup3's horizontal movement */
+@keyframes cup3LeftRight {
+  0%, 100% {
+    left: 200px;
+  }
+  50% {
+    left: 195px;
+  }
+}
 
     .cup1 {
       position: absolute;
@@ -67,6 +128,7 @@
       left: 150px;
       z-index: 5;
       scale: 95%;
+      animation: cup1UpDown 4s ease-in-out infinite, cup1LeftRight 6s ease-in-out infinite;
     }  
     .cup2 {
       position: absolute;
@@ -74,6 +136,7 @@
       left: 150px;
       z-index: 5;
       scale: 95%;
+      animation: cup2UpDown 3s ease-in-out infinite, cup2LeftRight 5s ease-in-out infinite;
     }
     .cup3 {
       position: absolute;
@@ -82,18 +145,68 @@
       z-index: 1;
       transform: scaleX(-1) scale(0.95); /* Combines horizontal flip with scaling */
       transform-origin: center center; /* Ensures the flip and scale happen around the center */
-}
+      animation: cup3UpDown 6s ease-in-out infinite, cup3LeftRight 4s ease-in-out infinite;
+    }
   .coffee {
     background-image: linear-gradient(#F9E214 66%, #DB2F00 30%);
     opacity: 60%; 
     width: 30%;
     height: 40%;
   }
+
+/* Keyframes for can1's clockwise movement */
+@keyframes can1Clockwise {
+  0% {
+    top: 190px;
+    left: 190px;
+  }
+  25% {
+    top: 185px;
+    left: 195px;
+  }
+  50% {
+    top: 190px;
+    left: 200px;
+  }
+  75% {
+    top: 195px;
+    left: 195px;
+  }
+  100% {
+    top: 190px;
+    left: 190px;
+  }
+}
+
+/* Keyframes for can2's counterclockwise movement */
+@keyframes can2Counterclockwise {
+  0% {
+    top: 200px;
+    left: 270px;
+  }
+  25% {
+    top: 195px;
+    left: 265px;
+  }
+  50% {
+    top: 200px;
+    left: 260px;
+  }
+  75% {
+    top: 205px;
+    left: 265px;
+  }
+  100% {
+    top: 200px;
+    left: 270px;
+  }
+}
 	  .can1 {
       position: absolute;
       top: 190px;
       left: 190px;
       z-index: 0;
+      animation: can1Clockwise 8s linear infinite;
     }
   .can2 {
   position: absolute;
@@ -101,13 +214,16 @@
   /* Add more styling details like gradients and text here */
 	  top: 200px;
   left: 270px;
+  animation: can2Counterclockwise 8s linear infinite;
     }
-  .kettle {
-    position: absolute;
-    top: 256px; /* Adjust as needed */
-    left: 5px; /* Adjust as needed */
-    opacity: 60%;
-  }
+    .kettle {
+      position: absolute;
+      top: 256px; /* Starting position */
+      left: 5px; /* Starting position */
+      opacity: 60%;
+      /* Animation properties */
+      animation: upDownAnimation 5s ease-in-out infinite, leftRightAnimation 8s ease-in-out infinite;
+    }
     .kettle-top{
   height: 20px;
   width: 15px;
@@ -128,6 +244,20 @@
   clip-path: ellipse(75px 30px at 50% 100%); /* Flipping the semi-circle */
   z-index: 3;
     }
+.kettle .spout {
+  position: absolute;
+  top: -120px; /* Adjust as needed */
+  left: 193px; /* Adjust the position where the spout should start */
+  width: 0; /* Width should be 0 for the triangle effect */
+  height: 00; /* Height should be 0 for the triangle effect */
+  border-left: 15px solid transparent; /* Half the width of the triangle */
+  border-right: 15px solid transparent; /* Half the width of the triangle */
+  border-bottom: 40px solid #ffa500; /* Height and color of the triangle */
+  transform: translate(-50%, 0) rotate(-25deg); /* Adjusts the spout angle */
+  transform-origin: left bottom; /* Ensures rotation happens from the base */
+}
+
+
     .kettle-handle {
   position: absolute;
   top: -90px; /* Adjust based on the kettle pot position */
@@ -219,6 +349,25 @@
       clip-path: polygon(10% 0, 90% 0, 100% 100%, 0 100%); /* Trapezoid shape */
       z-index: 1;
     }
+
+  @keyframes upDownAnimation {
+    0%, 100% {
+      top: 256px;
+    }
+    50% {
+      top: 246px; /* Moves up by 10px */
+    }
+  }
+
+  /* Define the keyframes for the left and right movement */
+  @keyframes leftRightAnimation {
+    0%, 100% {
+      left: 5px;
+    }
+    50% {
+      left: 15px; /* Moves right by 10px */
+    }
+
   </style>
 
 <body>
@@ -236,11 +385,12 @@
       <div class="triangle"></div>
     </div>
     <div class="kettle">
-  		  <div class="kettle-top"></div>
+  		<div class="kettle-top"></div>
+      <div class="spout"></div>
       <div class="kettle-lid"></div>
       <div class="kettle-handle"></div>
       <div class="kettle-pot">
-  	      <div class="panel"></div>
+  	    <div class="panel"></div>
         <div class="panel"></div>
         <div class="panel"></div>
         <div class="panel"></div>
@@ -248,7 +398,7 @@
 
       <div class="kettle-waist"></div>
       <div class="kettle-base"></div>
-				    </div>
+		</div>
 
     <div class="coffee can1">
       <!-- Add more elements for text and other details -->
